# watertap-solvers

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
src/watertap_solvers/: __init__.py  _base.py  conftest.py  model_debug_mode.py
src/watertap_solvers/tests/: model_debug_example_script.py  test_model_debug_mode.py  test_solver_wrappers.py  test_solvers.py
